Fix game info position on whitespace A/B test

--- a/src/styl/whitespace.styl
+++ b/src/styl/whitespace.styl
@@ -30,6 +30,21 @@
       bottom: 0
       width: 100%
       height: 100%
-      
+
+    .end-screen-info
+      top: 40%
+
   a.btn-close
     color: #7c7c7c
+    text-shadow: 0
+
+body.portrait
+  #end-screen
+    .campaign-container.whitespace
+      .end-screen-info
+          top: 55%
+          -webkit-transform: translate(0, 0)
+
+    a.btn-close
+      color: #7c7c7c
+      text-shadow: 0
